<resources>
    <string name="app_name">Projek_ImunKu</string>
    <string name="title_home">Home</string>
    <string name="title_daftarImun">Daftar</string>
    <string name="title_jadwalImun">Jadwal</string>
    <string name="title_profil">Profil</string>
    <string name="title_lokasi">Lokasi</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id">870507960329-9qmf3kmipqqon2hd9ngtk7i5isifcnmd.apps.googleusercontent.com</string>
    <string name="google_maps_key">AIzaSyCgIoDesNIV9_PHonSL8EcFzZ2mKMHq9GQ</string>
</resources>