<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_daftarImun"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_daftarImun" />

    <item
        android:id="@+id/navigation_lokasi"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_lokasi" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_jadwalImun"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_jadwalImun" />

    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_profil" />

</menu>