<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_daftarImun"
        android:name="com.example.projek_imunku.ui.daftar.DaftarImunisasiFragment"
        android:label="@string/title_daftarImun"
        tools:layout="@layout/fragment_daftar_imunisasi" />

    <fragment
        android:id="@+id/navigation_lokasi"
        android:name="com.example.projek_imunku.ui.lokasi.LokasiFragment"
        android:label="@string/title_lokasi"
        tools:layout="@layout/fragment_lokasi" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.projek_imunku.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_jadwalImun"
        android:name="com.example.projek_imunku.ui.jadwal.JadwalImunisasiFragment"
        android:label="@string/title_jadwalImun"
        tools:layout="@layout/fragment_jadwal_imunisasi" />

    <fragment
        android:id="@+id/navigation_profil"
        android:name="com.example.projek_imunku.ui.profil.ProfilFragment"
        android:label="@string/title_profil"
        tools:layout="@layout/fragment_profil" />
</navigation>